--- a/views/admin/session-view.ejs
+++ b/views/admin/session-view.ejs
@@ -67,7 +67,7 @@
                     <div class="label">Status</div>
                 </div>
                 <div class="meta-item">
-                    <div class="value" style="font-size: 14px;"><%= new Date(session.updated_at).toLocaleString() %></div>
+                    <div class="value" style="font-size: 14px;"><%= melb(session.updated_at) %></div>
                     <div class="label">Last Updated</div>
                 </div>
             </div>
